# enveil

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  test_migration.sh
.claude/: settings.local.json
.github/workflows/: main.yml
src/: cli.rs  config.rs  env_template.rs  error.rs  main.rs  runner.rs
src/commands/: delete.rs  import.rs  init.rs  list.rs  mod.rs  rotate.rs  run.rs  set.rs
src/store/: mod.rs  password.rs
