[package]
name = "enveil"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enveil"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
